# AuctionApp

./: .gitignore  AuctionApp.pro  README.md
client/: .LoginForm.qml.swo  AddAuction.qml  AddAuctionView.qml  Auction.qml  AuctionAppClient.pro  AuctionAppClient_hu_HU.ts  LoginForm.qml  LoginForm_BACKUP_519.qml  LoginForm_LOCAL_381.qml  LoginForm_REMOTE_519.qml  OptionForm.qml  ProfileView.qml  RegistrationForm.qml  SearchView.qml  SideBar.qml  Title.qml  UserView.qml  apirequest.cpp  apirequest.h  auction.cpp  auction.h  auctionimages.cpp  auctionimages.h  auctionitem.cpp  auctionitem.h  auctionlistmodel.cpp  auctionlistmodel.h  img.qrc  main.cpp  main.qml  pendingitem.cpp  pendingitem.h  pendingitemlistmodel.cpp  pendingitemlistmodel.h  profile.cpp  profile.h  profile.qml  qml.qrc  ratingitem.cpp  ratingitem.h  (+3 more)
client/build-AuctionAppClient-Desktop_Qt_5_14_1_MinGW_64_bit-Debug/: .qmake.stash
client/old/: AuctionApp.pro  AuctionApp_hu_HU.ts  login.qml  mainwindow.cpp  mainwindow.ui
server/: CMakeLists.txt  Dockerfile  SERVER_README.md  database.db
server/modules/: python.cmake  qt_module.cmake
server/src/: CMakeLists.txt  database.db  main.cpp
server/src/auction_closer/: CMakeLists.txt  auction_closer.cpp  auction_closer.h
server/src/cpp_email/: CMakeLists.txt  cpp_email.cpp  cpp_email.h  emailsender.py
server/src/db_server/: CMakeLists.txt  auction_db_server.cpp  auction_db_server.h  db_server.cpp  db_server.h
server/src/manager_server/: CMakeLists.txt  auction_db_server.cpp  auction_db_server.h
server/src/server/: CMakeLists.txt  auction_server.cpp  auction_server.h  server.cpp  server.h
